deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-demo
spec:
  replicas:  1
  selector:
    matchLabels:
      app: jenkins-demo
  template:
    metadata:
      labels:
        app: jenkins-demo
    spec:
      containers:
      - name: jenkins-demo
        image: jenkins/jenkins:lts
        ports:
        - containerPort:  8080
        volumeMounts:
        - name: jenkins-demo-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-demo-home
        persistentVolumeClaim:
          claimName: jenkins-demo-pvc
