ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: jenkins-ingress
spec:
 rules:
 - host: jenkins.trimawin.de
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: jenkins-demo-service
           port:
             number: 8080
